# CryptoTax

./: .gitignore  .travis.yml  Makefile  Pipfile  README.md  download_data.py  load_data.py  main.py  pandas-cheatsheet.md  pyproject.toml  requirements.txt  setup.py  swedish_taxes.py  util.py
.github/workflows/: test.yml
cryptotax/: __init__.py  __main__.py  avanza.py  avanza_api.py  download_data.py  krakenapi.py  load_data.py  main.py  openfigi.py  swedish_taxes.py  timevalue.py  util.py
example/: generic-trades.csv
