[tool.poetry]
name = "cryptotax"
version = "0.1.0"
description = "Get an overview of your assets, calculate your taxes (mainly on crypto), and more"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
CurrencyConverter = "^0.14.1"
tabulate = "^0.8.6"
python-dateutil = "^2.8.1"
requests = "^2.23.0"
beautifulsoup4 = "^4.8.2"
pandas = "^1.0.2"
pydash = "^4.7.6"
matplotlib = "^3.2.0"
joblib = "^0.14.1"
deprecation = "^2.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
mypy = "^0.770"
flake8 = "^3.7.9"
ipykernel = "^5.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
