[tool.poetry]
name = "cryptotax"
version = "0.1.0"
description = "Get an overview of your assets, calculate your taxes (mainly on crypto), and more"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"

[tool.poetry.scripts]
cryptotax = "cryptotax.main:main"

[tool.poetry.dependencies]
python = "^3.7"
CurrencyConverter = "^0.14.1"
tabulate = "^0.8.6"
python-dateutil = "^2.8.1"
requests = "^2.23.0"
beautifulsoup4 = "^4.8.2"
pandas = "^1.0.2"
pydash = "^4.7.6"
matplotlib = "^3.2.0"
joblib = "^0.14.1"
deprecation = "^2.0.7"
click = "^7.1.2"
iso8601 = "^0.1.12"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "*"
black = "^19.10b0"
mypy = "*"
flake8 = "*"
ipykernel = "*"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-report=term --cov-report=html --cov=cryptotax"
testpaths = [
    "cryptotax",
]
python_files = ["*.py"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
